<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/topdown_menu_searchEvents"
            android:id="@+id/navigation_searchEvents"
            android:onClick="openLocate">
        </item>
        <item
            android:title="@string/topdown_menu_createEvent"
            android:id="@+id/navigation_createEvent"
            android:onClick="openCreateEventActivity">
        </item>
        <item
            android:title="@string/topdown_menu_settings"
            android:id="@+id/navigation_settings"
            android:onClick="openConfigurations">
        </item>
    </group>
</menu>